syntax = "proto3";

option java_multiple_files = true; 
option java_package = "io.grpc.examples.helloworld.protobuf"; 
option java_outer_classname = "HelloWorldProto"; 
option objc_class_prefix = "HLW";
 
package helloworld;
 
// The greeting service definition. 
service Greeter { 
	// Sends a greeting 
	rpc SayHello (SearchRequest) returns (SearchResponse) {} ;
	//rpc SayWorld (HelloRequest) returns (HelloReply) {} ;
} 

// The request message containing the user's name. 
message SearchRequest {
	
	message HelloRequest { 
	   string name = 1; 
    }
 
    message HelloRequest2 { 
	    string name = 1; 
    }
    
    repeated HelloRequest helloRequest = 1;
    repeated HelloRequest2 helloRequest2 = 2;
}

message SearchResponse {
	
	message HelloReply { 
	   string message = 1; 
    }
  
    message HelloReply2 { 
	   string message = 1; 
    }
    
    repeated HelloReply helloReply = 1;
    repeated HelloReply2 helloReply2 = 2;
}
